--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu:latest
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
 
             - name: Set up JDK 21
-              uses: actions/setup-jave@v4
+              uses: actions/setup-java@v4
               with:
                   distribution: temurin
                   java-version: 21
