--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,5 +67,9 @@ jobs:
                       docker images 596484148546.dkr.ecr.eu-central-1.amazonaws.com/divarak --format "{{.ID}}" \
                         | xargs -r docker rmi -f
 
-                      docker run -d --name divarak-service -p 8080:8080 \
+                      docker run -d --name divarak-service \
+                        -p 8080:8080 \
+                        -e SPRING_DATASOURCE_URL=${{ secrets.RDS_HOST }}
+                        -e SPRING_DATASOURCE_USERNAME=${{ secrets.RDS_USER }}
+                        -e SPRING_DATASOURCE_PASSWORD=${{ secrets.RDS_PASSWORD }}
                         596484148546.dkr.ecr.eu-central-1.amazonaws.com/divarak/divarak-service:${{ github.sha }}
