--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
-    autoconfigure:
-        exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
 server:
     port: 8080
+
+spring:
+    datasource:
+        driver-class-name: org.postgresql.Driver
