--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ server:
 spring:
     datasource:
         driver-class-name: org.postgresql.Driver
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
